# spdlog

./: .gitignore  BUILD  CMakeLists.txt  README.md
bench/: BUILD
example/: example.cpp
include/spdlog/: common.h
include/spdlog/details/: os.h
include/spdlog/sinks/: dist_sink.h  wincolor_sink.h
tests/: CMakeLists.txt  utils.cpp
